# ikal

./: .gitignore  .gitlab-ci.yml  CREDITS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
derive/: Cargo.toml
derive/src/: component.rs  lib.rs  macros.rs  params.rs  serialize.rs  symbol.rs
docs/: ikal.drawio
src/: content_line.rs  errors.rs  iter.rs  lib.rs  parser.rs  ser.rs
src/components/: mod.rs  valarm.rs  vcalendar.rs  vevent.rs  vfreebusy.rs  vjournal.rs  vtimezone.rs  vtodo.rs
src/parser/: alarm.rs  change.rs  components.rs  datatype.rs  datetime.rs  descriptive.rs  misc.rs  mod.rs  properties.rs  recurrence.rs  relationship.rs  timezone.rs
src/properties/: class.rs  date.rs  geo.rs  mod.rs  period.rs  rdate.rs  recur.rs  request_status.rs  status.rs  text.rs  time_transparency.rs  trigger.rs  uri.rs
tests/: 1.ics  1.out  2.ics  2.out  3.ics  3.out
tests/alarms/: 1.out  2.out
tests/calendars/: 1.out  2.ics  2.out  3.out  4.ics  4.out  america_new_york.ics  america_new_york.out  calendar_with_unicode.out  created_calendar_with_unicode_fields.ics  created_calendar_with_unicode_fields.out  example.ics  example.out  issue_156_RDATE_with_PERIOD_TZID_khal.ics  issue_156_RDATE_with_PERIOD_TZID_khal.out  issue_156_RDATE_with_PERIOD_TZID_khal_2.out  issue_237_fail_to_parse_timezone_with_non_ascii_tzid.ics  issue_237_fail_to_parse_timezone_with_non_ascii_tzid.out  issue_27_multiple_periods_in_freebusy_multiple_freebusies.out  issue_322_expected_calendar.ics  issue_322_expected_calendar.out  issue_466_convert_tzid_with_slash.ics  issue_466_convert_tzid_with_slash.out  issue_466_respect_unique_timezone.ics  issue_466_respect_unique_timezone.out  issue_526_calendar_with_different_events.out  issue_526_calendar_with_event_subset.out  issue_526_calendar_with_events.out  issue_526_calendar_with_shuffeled_events.out  pacific_fiji.ics  pacific_fiji.out  period_with_timezone.ics  period_with_timezone.out  pr_480_summary_with_colon.ics  time.ics  time.out  timezone_rdate.ics  timezone_rdate.out  timezone_same_start.out  timezone_same_start_and_offset.ics  (+3 more)
tests/events/: 1.ics  1.out  event_with_escaped_character1.ics  event_with_escaped_character1.out  event_with_escaped_character2.ics  event_with_escaped_character2.out  event_with_escaped_character4.ics  event_with_escaped_character4.out  (+32 more)
(+9 files in other folders)
