[package]
name = "ical-parser"
description = "Parse icalendar object"
license = "MIT"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
repository = "https://github.com/sanpii/ical-parser.git"
documentation = "https://docs.rs/ical-parser/"
keywords = ["icalendar"]
categories = ["parser-implementations", "text-processing"]
edition = "2021"

[dependencies]
nom = "7.0"
thiserror = "1.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]
