[workspace]
members = [".", "derive"]

[package]
name = "ikal"
description = "Parse icalendar object"
license = "MIT"
version = "0.4.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
repository = "https://github.com/kaldav-rs/ikal.git"
documentation = "https://docs.rs/ikal/"
keywords = ["icalendar"]
categories = ["parser-implementations", "text-processing"]
edition = "2024"

[dependencies]
nom = "8.0"
nom-language = "0.1.0"
thiserror = "2.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dependencies.ikal-derive]
version = "0.4"
path = "derive"

[dev-dependencies]
similar-asserts = "1.5"
