[package]
name = "ikal-derive"
version = "0.4.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2024"
description = "Proc macro for ikal crate"
license = "MIT"
repository = "https://github.com/kaldav-rs/ikal.git"

[lib]
proc-macro = true

[dependencies]
bitflags = "2.6"
darling = "0.22"
proc-macro-crate = "3.2"
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
version = "2.0"
features = ["extra-traits"]
